--- a/app.json
+++ b/app.json
@@ -54,5 +54,6 @@
   ]
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "lazyCodeLoading": "requiredComponents"
 }
