--- a/project.config.json
+++ b/project.config.json
@@ -48,7 +48,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wxc6120e7b431243cb",
+  "appid": "wx9005edc29896d6bb",
   "projectname": "itheima",
   "debugOptions": {
     "hidedInDevtools": []
