--- a/project.private.config.json
+++ b/project.private.config.json
@@ -21,15 +21,8 @@
         },
         {
           "name": "",
-          "pathName": "pages/goods_list/goods_list",
-          "query": "cid=5",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "",
-          "pathName": "pages/goos_detail/goos_detail",
-          "query": "goods_id=57436",
+          "pathName": "pages/cart/cart",
+          "query": "",
           "scene": null,
           "launchMode": "default"
         }
