auth create order

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -30,6 +30,13 @@
           "name": "Pay",
           "pathName": "pages/pay/pay",
           "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "auth",
+          "pathName": "pages/auth/auth",
+          "query": "",
           "scene": null,
           "launchMode": "default"
         }
