--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,46 +1,60 @@
 {
-  "setting": {},
-  "condition": {
-    "plugin": {
-      "list": []
-    },
-    "game": {
-      "list": []
-    },
-    "gamePlugin": {
-      "list": []
-    },
-    "miniprogram": {
-      "list": [
-        {
-          "name": "",
-          "pathName": "pages/category/category",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
+    "setting": {},
+    "condition": {
+        "plugin": {
+            "list": []
         },
-        {
-          "name": "",
-          "pathName": "pages/cart/cart",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
+        "game": {
+            "list": []
         },
-        {
-          "name": "Pay",
-          "pathName": "pages/pay/pay",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
+        "gamePlugin": {
+            "list": []
         },
-        {
-          "name": "auth",
-          "pathName": "pages/auth/auth",
-          "query": "",
-          "scene": null,
-          "launchMode": "default"
+        "miniprogram": {
+            "list": [
+                {
+                    "name": "",
+                    "pathName": "pages/category/category",
+                    "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "",
+                    "pathName": "pages/cart/cart",
+                    "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "Pay",
+                    "pathName": "pages/pay/pay",
+                    "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "auth",
+                    "pathName": "pages/auth/auth",
+                    "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "登录",
+                    "pathName": "pages/login/login",
+                    "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "user",
+                    "pathName": "pages/user/user",
+                    "query": "",
+                    "scene": null,
+                    "launchMode": "default"
+                }
+            ]
         }
-      ]
     }
-  }
 }
